[feat/photo-page] Photo Page in development while some styles are added to PhotoContent Component

--- a/src/components/photo/PhotoContent.module.css
+++ b/src/components/photo/PhotoContent.module.css
@@ -12,6 +12,9 @@
   animation: scaleUp 232ms forwards;
 }
 
+.single.photo {
+  grid-template-columns: 1fr;
+}
 @keyframes scaleUp {
   to {
     opacity: initial;
