[feat/lost-password-page] Desenvolvimento da página de recuperação de senha e redenifição de senha feito. Desenvolvido a parte de erro 404. E agora em desenvolvimento a página de estatísticas

--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,13 @@ input {
 .hoverLetter:hover {
   letter-spacing: 1px;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.AppBody {
+  flex: 1;
+}
