--- a/src/components/user/UserStatsGraphs.module.css
+++ b/src/components/user/UserStatsGraphs.module.css
@@ -6,11 +6,13 @@
   background: #5552;
   border-radius: 2rem;
   border: 1px solid #5552;
+  margin-bottom: 2rem;
 }
 
 .graphItem {
   border: 1px solid #5552;
   border-radius: 0.75rem;
+  background: #fff;
   display: grid;
   align-items: center;
   padding: 2rem;
@@ -23,10 +25,12 @@
 }
 
 .total {
+  grid-column: 1/3;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  background: #fff;
   justify-content: center;
   border: 1px solid #5552;
   border-radius: 0.75rem;
@@ -37,10 +41,11 @@
 .total span {
   font-family: var(--type-second);
   position: relative;
+  font-size: 4rem;
 }
 @media (min-width: 1024px) {
   .total span {
-    font-size: 5rem;
+    font-size: 7rem;
   }
 }
 .total span::before {
@@ -53,4 +58,14 @@
   width: 1.5rem;
   height: 1.5rem;
   background: #fb4;
+}
+
+@media (max-width: 40rem) {
+  .graph {
+    grid-template-columns: 1fr;
+    margin-bottom: 2rem;
+  }
+  .total {
+    grid-column: 1;
+  }
 }
